# collectionforstrickkram

./: .gitignore  .gitmodules  Makefile  coding-style.md  pyproject.toml  setup.cfg  show_relaxing.py
builtin_verbesserer/: Makefile  __init__.py  removecolumn.xml
clothfactory_parts/: __init__.py  plyford_mesh_handler.py  strickgraph_datatypes.py  strickgraph_physics_factoryleafs.py  test_clothfactory_parts.py
clothfactory_parts/improving/: __init__.py  add_column_both_sides.py
clothfactory_parts/meshthings/: __init__.py  mesh_to_surfacemap.py  meshtypes.py  strickgraph_dummy_from_rand.py
clothfactory_parts/physics/: __init__.py  relax_strickgraph_on_surface.py  (+1 more)
createcloth/: __init__.py  abstract_identifier.py  helper_limitcalculationtime.py
meshhandler/: README.md  bordervisualizer.py  create_surfacemap.py  gridrelaxator.py  gridrelaxator.py_alternate  gridrelaxator.py_old  main.py  meshfortests.ply  spring2dsolver.py  stitches.xml  strickgraph_visualizer.py  test_meshhandler.py
myprogram/: asd.py  example_strickdings.py  strickcompleter.py  test.ply  testbody.ply  testbody_withmap.ply
rechtsstrickzuangepasst/: brain.py  rechtsstrick_verbesserer.py  test_rechtstrickzuangepasst.py  work_relax.py
strickgraph/: __init__.py  load_stitchinfo.py  strickgraph_action.py  strickgraph_base.py  strickgraph_fromgrid.py  strickgraph_helper.py  strickgraph_replacesubgraph.py  strickgraph_stitchtypes.py  strickgraph_toknitmanual.py  test_strickgraph.py
verbesserer/: __init__.py  manualtoverbesserung.py  test_verbesserer.py
visualizer/: plotter.py
(+172 files in other folders)
