[metadata]
name = createcloth
version=0.1
description="package for creation of strickzeugs"
author ="Richard Fechner"

[options]
packages=createcloth, createcloth.meshhandler, createcloth.strickgraph, createcloth.builtin_verbesserer, createcloth.utils, createcloth.rechtsstrickzuangepasst, createcloth.verbesserer, createcloth.visualizer, createcloth.strickgraph.stitchdata, createcloth.builtin_verbesserer.src,
include_package_data = True
install_requires =
	requests
	importlib

#[options.packages.find]

#[options.package_dir]
#createcloth.strickgraph.stitchdata = createcloth.strickgraph.stitchdata

#[options.package_data]
#createcloth.strickgraph.stitchdata = stitches.xml,
#createcloth.strickgraph.stitchdata = *.xml

[options.data_files]
/createcloth = createcloth/strickgraph/stitchdata/stitches.xml

